# stemmgpt

./: Cargo.toml  ai.py  memory.txt
src/: animation.rs  app.rs  main.rs  typewriter.rs
src/frames/: frame001.txt  frame002.txt  frame003.txt  frame004.txt  frame005.txt  frame006.txt
src/frames/blinking/: frame001.txt  frame002.txt  frame003.txt  frame004.txt  frame005.txt  frame006.txt
src/frames/dying/: frame001.txt
src/frames/idle/: frame001.txt
src/frames/talking/: frame001.txt  frame002.txt  frame003.txt  frame004.txt
