[package]
name = "your_terminal_app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core terminal UI
ratatui = { version = "0.26", features = ["crossterm"] }
crossterm = { version = "0.27", features = ["serde"] }
include_dir = "0.7"
# Error handling
color-eyre = "0.6"

# Utilities
itertools = "0.12"

# Optional but recommended for async
tokio = { version = "1.0", features = ["full"] }

chrono = "0.4"
rand = "0.8"